styles.css
@import url("open-sans.css");

html {
    font-family: 'Open Sans', sans-serif;
    font-size: 16px;
}

body {
    margin: 0;
}

.theme__container {
/*    background: url(colors.gif); no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    background-color: #1ED2E2;*/
    padding: 80px;
    color: #FFFFFF;
    text-align: center;
    text-transform: uppercase;
}

@-webkit-keyframes pulse {
      0% {background-color: rgb(247, 143, 49);}
     10% {background-color: rgb(181, 185, 53);}
     20% {background-color: rgb(238, 49, 45);}
     30% {background-color: rgb(38, 189, 207);}
     40% {background-color: rgb(177, 28, 84);}
     50% {background-color: rgb(128, 201, 210);}
     60% {background-color: rgb(106, 37, 105);}
     70% {background-color: rgb(17, 170, 88);}
     80% {background-color: rgb(239, 91, 161);}
     90% {background-color: rgb(137, 183, 127);}
     100% {background-color: rgb(26, 115, 186);}
}

@keyframes pulse {
      0% {background-color: rgb(247, 143, 49);}
     10% {background-color: rgb(181, 185, 53);}
     20% {background-color: rgb(238, 49, 45);}
     30% {background-color: rgb(38, 189, 207);}
     40% {background-color: rgb(177, 28, 84);}
     50% {background-color: rgb(128, 201, 210);}
     60% {background-color: rgb(106, 37, 105);}
     70% {background-color: rgb(17, 170, 88);}
     80% {background-color: rgb(239, 91, 161);}
     90% {background-color: rgb(137, 183, 127);}
     100% {background-color: rgb(26, 115, 186);}
}

.color__pulsing {
    -webkit-animation: pulse 3.5s infinite alternate;
    -moz-animation: pulse 3.5s infinite alternate;
    -ms-animation: pulse 3.5s infinite alternate;
    -o-animation: pulse 3.5s infinite alternate;
    animation: pulse 3.5s infinite alternate;
    background-color: rgb(247, 143, 49);
}

.theme__damn-shiok {
    font-size: 7.5em;
    line-height: 98%;
    margin-left: auto;
    margin-right: auto;
    font-weight: 800;
}

.theme__damn {
    font-size: 8.2rem;
}

.theme__tagline {
    font-size: 1.85em;
    margin: 15px 0;
    line-height: 1em;
    font-weight: 100;
    font-style: italic;
    letter-spacing: 6px;
}

.content {
    text-align: center;
    margin: 70px 15px;
}

.content__top {
    text-transform: uppercase;
}

.header__container {
    padding-bottom: 50px;
}

.header__away-day {
    font-weight: 800;
    font-size: 3em;
    line-height: 100%;
    margin-bottom: 15px;
}

.header__tw {
    font-size: 1.8em;
    font-style: italic;
    font-weight: 100;
    letter-spacing: 3px;
    line-height: 130%;
}

.details__container {
    margin-bottom: 70px;
    padding: 30px 0;
}

.container--with-border {
    border-bottom: 1px solid #CFCFCF;
    max-width: 540px;
    margin-left: auto;
    margin-right: auto;
}

.buttons__container {
    padding-bottom: 70px;
}

.details__text--bold {
    font-size: 1.5em;
    font-weight: 800;
    line-height: 150%;
}

.details__text--italic {
    font-style: italic;
    letter-spacing: 5px;
    color: #BBBBBB;
}

.button {
    padding: 20px;
    line-height: 100%;
    text-align: center;
    text-decoration: none;
    color: #FFFFFF;
    background-color: black;
    letter-spacing: 1px;
    font-size: 1em;
    display: inline-block;
    font-weight: 100;
    font-style: italic;
    width: 130px;
    margin-right: 10px;
}

.button.-last {
    margin-right: 0;
}

.photobook {
  max-width: 80%;
  margin: 70px auto 0;
}

.photobook-header {
  text-transform: uppercase;
  margin-bottom: 50px;
}

.attendee-list {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: flex-end;
  justify-content: center;
}

.attendee {
  box-sizing: border-box;
  width: 220px;
  margin: 20px;
}

.attendee-photo {
  width: 100%;
  height: 220px;
  object-fit: cover;
  filter: grayscale(100%);
  -webkit-filter: grayscale(100%);
}

.attendee-name {
  font-size: 1.0rem;
  font-weight: bold;
  margin-bottom: 0;
}

.attendee-quote {
  font-size: 1.0rem;
  font-weight: normal;
}

.attendee-home-office {
  margin-top: 0;
  font-style: italic;
}

/*Small screen styles*/

@media screen and (max-width: 600px) {
    html {
        font-size: 12px;
    }

    .theme__container {
        padding: 40px 20px;
    }

    .theme__damn-shiok {
        font-size: 6.4em;
    }

    .theme__damn {
        font-size: 7rem;
    }

    .theme__tagline {
        font-size: 1.4em;
        letter-spacing: 5px;
    }

    .content {
        margin: 60px 30px;
    }

    .header__container {
        padding-bottom: 40px;
    }

    .details__container {
        margin-bottom: 60px;
        padding: 25px 0;
    }

    .buttons__container {
        padding-bottom: 40px;
    }

    .button {
        padding: 15px;
        display: block;
        width: auto;
        margin-right: 0;
        margin-bottom: 10px;
    }

    .photobook {
      max-width: 100%;
      margin: 50px auto 0;
    }

    .photobook-header {
      text-transform: uppercase;
      margin-bottom: 30px;
    }

    .attendee {
      margin: 5px;
}

